# acm-aiops

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
agent/: pyproject.toml
agent/src/agent/: acm_graph.py  main.py
agent/src/agent/federated_learning/monitoring/: __init__.py  analyzer.py  chart.py  inspector.py  progress_manager.py  prometheus.py  state.py  tool.py  workflow.py
agent/src/agent/graphs/: engineer_graph.py  inspector_graph.py  router_graph.py
agent/src/agent/nodes/: acm_node.py  agent_state.py  analyzer.py  engineer.py  inspector.py  rechart.py  router.py  tool.py  tool_node.py
agent/src/agent/states/: agent_state.py  mcp_state.py
agent/src/agent/tools/: mcp_tool.py  render_recharts.py
agent/src/agent/utils/: copilotkit_state.py  logging_config.py  mcp_config_validator.py  model_factory.py  print_messages.py  session_config.py  tool_executor.py
agent/src/notebooks/: federated_workflow_exploration.ipynb  multi-agent-worflow-engineer.ipynb  multi-agent-worflow-inspector.ipynb
agent/src/notebooks/.ipynb_checkpoints/: multi-agent-worflow-inspector-checkpoint.ipynb
ui/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/Components/: Action.tsx  Agent.tsx  Approve.tsx  Chart.tsx  ChartOutput.tsx  Chat.module.css  Chat.tsx  GenericAction.tsx  MarkdownRender.tsx  Progress.tsx  Spinner.tsx  StatusGraph.tsx  TextMessageRender.tsx  Toggle.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/app/lib/: agent_state.ts
